# dyatel

./: .gitignore  Makefile.in  README.md  config_params.yml  configure.in  supervisor.conf
cti/: Makefile.in  dyatel-cti-spaxxx  dyatel-daw  dyatel-sconnect
cti/templates/: extcall.tt  intcall.tt
database/: Makefile.in  admin.sql  createdb.sql  initdb.sql  run_tests.sh  sampledata.sql  test_route.sql  tests_common.sql  update-0.0.100  update-0.0.102  update-0.0.104  update-0.0.107  update-0.0.109  update-0.0.11  update-0.0.110  update-0.0.111  update-0.0.114  update-0.0.115  update-0.0.116  update-0.0.117  update-0.0.118  update-0.0.13  update-0.0.15  update-0.0.16  update-0.0.17  update-0.0.18  update-0.0.19  update-0.0.2.sql  update-0.0.21  update-0.0.22  update-0.0.23  update-0.0.24  update-0.0.25  update-0.0.26  update-0.0.27  update-0.0.28  update-0.0.29  update-0.0.3.sql  update-0.0.30  update-0.0.31  (+34 more)
debian/: .gitignore  apache.conf.sample  changelog  control  dirs  docs  dyatel.config  dyatel.cron.d  dyatel.init  dyatel.install  dyatel.links  dyatel.logrotate  dyatel.postinst  dyatel.postrm  dyatel.prerm  rules
ivr/: Makefile.in  dyatel-ivr-aa
provision/: Makefile.in  dyatel-provision  provision.pl
provision/templates/: linksys-spa.conf  linksys-spa502.tpl.xml  linksys-spa504g.conf  linksys-spa50x.tpl.xml  (+2 more)
tools/: Makefile.in  dyatel-backup
ui/: Changes  MANIFEST.SKIP  Makefile.PL  README  dyatel.conf
ui/t/: 01app.t  (+30 more)
yateconf/: cdrbuild.conf  extmodule.conf  jbfeatures.conf  pbxassist.conf  pgsqldb.conf  queues.conf  register.conf  subscription.conf
(+177 files in other folders)
